ingress/ingress-resource-default.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: k8s.example.com
      http:
        paths:
          - path: /template-api-java
            pathType: Prefix
            backend:
              service:
                name: template-api-java
                port:
                  number: 8080
          - path: /template-api-kotlin
            pathType: Prefix
            backend:
              service:
                name: template-api-kotlin
                port:
                  number: 8080
          - path: /template-api-go
            pathType: Prefix
            backend:
              service:
                name: template-api-go
                port:
                  number: 8080
